Graficos medicamentos(error al mostrar mas de uno)